Added TCP server mode to serial port emulation (macOS).
Not tested on other platforms yet.
Fixed copy/paste crash on macOS.
Fixed CapsLoock lock on current SDL2.

--- a/BasiliskII/src/MacOSX/Info.plist
+++ b/BasiliskII/src/MacOSX/Info.plist
@@ -22,6 +22,8 @@
 	<string>Basilisk II 1.0, SDL2 port</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.lifestyle</string>
 	<key>NSHelpFile</key>
 	<string>README.txt</string>
 	<key>NSMainNibFile</key>
